fix text size issue on mobile

--- a/src/components/AuthFormWrapper/FormLink/FormLink.module.sass
+++ b/src/components/AuthFormWrapper/FormLink/FormLink.module.sass
@@ -12,3 +12,5 @@
 @media screen and (max-width: 498px) 
     .linkText 
         font-size: 0.75rem
+        min-width: 17rem
+
